--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,15 @@
     "description": "The hub for all of LiveG's help guides, technical references and more.",
     "icons": [
         {
-            "src": "/media/appicon.png",
+            "src": "/media/icon.png",
             "type": "image/png",
             "sizes": "512x512"
+        },
+        {
+            "src": "/media/appicon.png",
+            "type": "image/png",
+            "sizes": "512x512",
+            "purpose": "maskable"
         }
     ],
     "scope": "/",
